[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/WoodMinigameNode.gd" type="Script" id=1]
[ext_resource path="res://Font/Size10Outline.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Tiles/bigtree.png" type="Texture" id=3]
[ext_resource path="res://Scenes/WoodMinigame.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 56, 64 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28, 8 )

[node name="WoodMinigameNode" type="Area2D"]
script = ExtResource( 1 )

[node name="WoodMinigame" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 16 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -9.53674e-07, 1.90735e-06 )
scale = Vector2( 3.6875, 3.6875 )
texture = ExtResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 48 )
shape = SubResource( 2 )

[node name="Notif" type="Label" parent="."]
visible = false
margin_left = -80.0
margin_top = -72.0
margin_right = 80.0
margin_bottom = -56.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Press E to interact!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="." to="." method="_on_WoodMinigameNode_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_WoodMinigameNode_body_exited"]
[connection signal="start" from="." to="WoodMinigame" method="_on_WoodMinigameNode_start"]
[connection signal="complete" from="WoodMinigame" to="." method="_on_WoodMinigame_complete"]
